<resources>
    <string name="app_name" translatable="false">vChat</string>

    <string name="start_vchat" translatable="false">START VCHAT</string>

    <string name="photo_transition_name" translatable="false">transition_photo</string>

    <string name="people">People</string>
    <string name="me">Me</string>

    <string name="ok">OK</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_account">New Account</string>

    <string name="secret_question">Secret Question</string>
    <string name="secret_answer">Secret Answer</string>

    <string name="verify_secret">Verify Secret Info</string>

    <string name="no_net">Cannot connect to the server</string>
    <string name="sys_error">System error</string>
    <string name="file_not_found">File not found</string>

    <string name="nickname">Nickname</string>
    <string name="avatar">Avatar</string>

    <string name="edit_avatar">Edit Avatar</string>
    <string name="edit_nickname">Edit Nickname</string>
    <string name="please_input_nickname">Please input nickname</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="logout">Logout</string>
    <string name="login_timeout">Login Timeout</string>
    <string name="login_first">Please login first</string>
    <string name="login_timeout_test">Login Timeout Test</string>
    <string name="logged_on_other">You have logged on to other devices</string>

    <string name="send">send</string>

    <string name="notify_channel_chat">chat</string>


</resources>
